; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_88pm80x.c_pm80x_deinit.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_88pm80x.c_pm80x_deinit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@g_pm80x_chip = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pm80x_deinit() #0 {
  %1 = load %struct.TYPE_2__*, %struct.TYPE_2__** @g_pm80x_chip, align 8
  %2 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %1, i32 0, i32 0
  %3 = load i32*, i32** %2, align 8
  %4 = icmp ne i32* %3, null
  br i1 %4, label %5, label %8

5:                                                ; preds = %0
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** @g_pm80x_chip, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  store i32* null, i32** %7, align 8
  br label %9

8:                                                ; preds = %0
  store %struct.TYPE_2__* null, %struct.TYPE_2__** @g_pm80x_chip, align 8
  br label %9

9:                                                ; preds = %8, %5
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
